Remove header.html and fix hero on mobile

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -16,9 +16,14 @@
     z-index: -1;
   }
 
-  img {
+  .image {
     position: absolute;
     top: 0;
+    height: 100%;
+    left: 0;
+    width: 100%;
+    background-position: center;
+    background-size: cover;
     z-index: -2;
   }
 }
